tweaked horizontal scroll issue

--- a/main.css
+++ b/main.css
@@ -77,22 +77,9 @@ h1 {
 }
 
 .row {
-  margin-left: 0;
   margin-right: 0;
 }
-[class^="col-"] > [class^="col-"]:first-child,
-[class^="col-"] > [class*=" col-"]:first-child
-[class*=" col-"] > [class^="col-"]:first-child,
-[class*=" col-"]> [class*=" col-"]:first-child,
-.row > [class^="col-"]:first-child,
-.row > [class*=" col-"]:first-child{
-  padding-left: 0px;
-}
-[class^="col-"] > [class^="col-"]:last-child,
-[class^="col-"] > [class*=" col-"]:last-child
-[class*=" col-"] > [class^="col-"]:last-child,
-[class*=" col-"]> [class*=" col-"]:last-child,
-.row > [class^="col-"]:last-child,
-.row > [class*=" col-"]:last-child{
-    padding-right: 0px;
+
+#margin-fix {
+  margin-right: -15px;
 }
